# idiom

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
data/prompts/: idp_prompt_1e5x_metadata.pkl  p06748_prompt_1e5x_metadata.pkl
entry_scripts/infer/: infer10_disprot.sh  infer10_idp.sh  make_prompt.py
entry_scripts/precompute/: make_targs.py  precompute.bash  split_part_from_onefile.bash  split_part_from_onefile.py  split_parts.bash  split_parts.py
entry_scripts/train/: train_FIM_10.bash  train_FIM_10_debug.bash
entry_scripts/train/post-train/: train_RL.bash  train_RL_custom.bash  train_entropy_sweep_4.bash
entry_scripts/train/post-train/custom_rewards/: custom_rewards.py
entry_scripts/train/pre-train/: train_FIM_10_old.bash
entrypoints/extract_activations/scripts/: extract_activations.bash
entrypoints/generate/scripts/: example_sequence.fasta  example_sequences.fasta  generate_idps.bash  generate_idps_length.bash  generate_idrs.bash  generate_idrs_length.bash
entrypoints/infer/: infer10_idp.sh
entrypoints/infer/output/: generated_full.fasta  generated_idrs.fasta  inference_config.yaml  tst_autoregressive.pkl
entrypoints/infer/scripts/: generate_idps.bash  generate_idrs.bash  infer_idp.bash  infer_idp_combined.bash  infer_p06748.bash  infer_specific.bash  make_idp_prompt.py  make_idp_prompts.bash  make_specific_prompts.bash
entrypoints/precompute/: combined_precompute.bash  make_precompute_parts.bash  make_targs.py  split_parts.py
entrypoints/train/post-train/: make_grpo_dset.bash  make_rl_dataset.bash  rl_sequence.fasta  train_RL_custom.bash  train_RL_protgps.bash  train_rl_custom.bash  train_rl_idp_custom.bash  train_rl_idp_protgps.bash  train_rl_idr_custom.bash  train_rl_idr_protgps.bash  train_rl_protgps.bash
entrypoints/train/pre-train/: pretrain.bash  pretrain_small.bash
rewards/custom_rewards/: custom_rewards.py
rewards/protgps/notebook/: Analysis.ipynb  Predict.ipynb
rewards/protgps/protgps/datasets/: abstract.py  disprot.py  reverse_homology.py
rewards/protgps/protgps/lightning/: base.py
rewards/protgps/protgps/loggers/: tensorboard.py  wandb.py
rewards/protgps/protgps/models/: abstract.py  classifier.py  fair_esm.py
rewards/protgps/protgps/utils/: loading.py  parsing.py
rewards/protgps/scripts/: dispatcher.py  inference.py  main.py
src/idiom/nn/layers/: __init__.py  blocks.py  mha.py  rotary.py  rpe.py  transformer_stack.py
src/idiom/nn/transformer/: module.py  nn.py  scores.py
src/idiom/scripts/cfgs/: extract.yaml  inference.yaml  training.yaml
src/idiom/scripts/data/: make_infer_prompt.py  make_precompute_parts.py  make_rl_dataset.py
src/idiom/scripts/transformer/: extract_activations.py  extract_embeddings.py  inference.py  precompute.py  train.py
src/idiom/utils/: data_utils.py  extract_helpers.py  misc.py  sampler.py  token.py
src/idr_plm/nn/layers/: __init__.py  blocks.py  codebook.py  diffusion.py  ida.py  mha.py  ppe.py  regression_head.py  structure_proj.py  structure_token.py  transformer_stack.py  transfusion_embedding.py
src/idr_plm/nn/transformer/: dataset.py  module.py  (+7 more)
src/idr_plm/utils/: conflow_featurization.py  graph.py  indices.py  misc.py  structure.py  structure_tokens_models.py
(+117 files in other folders)
