[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "idr-plm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hydra-core>=1.3.2",
    "ipython>=8.38.0",
    "lightning>=2.6.0",
    "lightning-bolts>=0.7.0",
    "pip>=25.0",
    "pre-commit>=4.5.1",
    "torch==2.4.0",
    "torch-geometric>=2.7.0",
    "torchvision==0.19.0",
]

[tool.hatch.build.targets.sdist]
include = [
    "/src"
]

[dependency-groups]
dev = [
    "ruff>=0.14.13",
]

[project.scripts]
precompute_transformer_dataset = "mole.scripts.data.precompute_transformer_dataset:main"
mgpt_transformer_train = "mole.scripts.transformer.train:main"
mgpt_transformer_precompute = "mole.scripts.transformer.precompute_dataset:main"
mgpt_transformer_infer = "mole.scripts.transformer.inference:main"
