[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "idiom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "biopython>=1.86",
    "einops>=0.8.1",
    "h5py>=3.15.1",
    "huggingface-hub>=1.10.1",
    "hydra-core>=1.3.2",
    "ipdb>=0.13.13",
    "ipython>=8.38.0",
    "lightning>=2.6.0",
    "lightning-bolts>=0.7.0",
    "pip>=25.0",
    "pre-commit>=4.5.1",
    "tensorboard>=2.20.0",
    "torch==2.4.0",
    "torch-geometric>=2.7.0",
    "torchvision==0.19.0",
    "tqdm>=4.67.1",
]

[tool.hatch.build.targets.sdist]
include = [
    "/src"
]

[dependency-groups]
dev = [
    "ruff>=0.14.13",
]

[project.scripts]
transformer_precompute = "idiom.scripts.transformer.precompute:main"
transformer_train = "idiom.scripts.transformer.train:main"
transformer_infer = "idiom.scripts.transformer.inference:main"
transformer_extract = "idiom.scripts.transformer.extract_activations:main"
make_infer_prompt = "idiom.scripts.data.make_infer_prompt:main"
make_rl_dataset = "idiom.scripts.data.make_rl_dataset:main"
make_precompute_parts = "idiom.scripts.data.make_precompute_parts:main"
